added bonedisance files

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,61 @@
-<!DOCTYPE html>
-<html>
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<title>Bone Distance - How far is too far?</title>
+<meta http-equiv="Content-Language" content="English" />
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<link rel="stylesheet" type="text/css" href="style.css" media="screen" />
+</head>
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+var pageTracker = _gat._getTracker("UA-5341653-1");
+pageTracker._trackPageview();
+</script>
 <body>
-<h1>Flat file<img src="asdf.png"></h1>
+
+<div id="header">
+<h1><a>Bone Distance</a></h1>
+<h2>How far is too far?</h2>
+</div>
+
+<div id="content">
+<h1>
+
+<script>
+
+var bones = new Array();
+bones[0] = "I'm on my way over, you're bone distance away.";
+bones[1] = "Baby, you're so dead to me. You're past my bone distance.";
+bones[2] = "I went with Vanessa cause the bone distance was a lot less.";
+bones[3] = "My bone distance is only 5 minutes... unless she's hot, then I'd give it 20."
+bones[4] = "Um yeah that's cool and all your dreams and aspirations, but more importantly are you bone distance away?";
+bones[5] = "Man that was a tough flight back.  Let's see who is within bone distance tonight."
+bones[6] = "He was a such a gentleman and so good to me, but frankly his bone distance was out of my range.";
+
+var bone = Math.floor(Math.random()*bones.length+1);
+document.write(bones[bone-1]);
+
+</script>
+
+</h1>
+</div>
+
+<div id="content">
+<p>bone dis·tance (bōn dĭs'təns)</p>
+<p><i>noun</i></p>
+<ol>
+<li>The maximum extent one will travel to get their bone on.</li>
+<li>How far your mom is from me.</li>
+</ol>
+</div>
+
+<div id="footer">
+a Jules Santana and Darius Miles production
+</div>
+
 </body>
+
 </html>
